# LSV_Final

./: .gitignore  CMakeLists.txt  Cvisualize.py  Gvisualize.py  output  plot.py  plot.sh  plot2.py  plot2_gaussian.py  readme
Circuit/: Circuit0.circuit  Circuit0optimized.circuit  example1.matrix  example2.cgraph  example2.matrix  example3.cgraph  example3.matrix
Log/Circuit/: example.circuit
cases/: case2.txt  case3.txt.dmd  case5.txt.dmd
cgLog/Circuit/: example.circuit  example100.cgraph  example121.cgraph  example144.cgraph  example16.cgraph  example169.cgraph  example196.cgraph  example225.cgraph  example25.cgraph  example36.cgraph  example4.cgraph  example49.cgraph  example64.cgraph  example81.cgraph  example9.cgraph
example/: example_cgraph.cgraph  example_input.circuit  example_output.circuit  example_output_withCG.circuit
pythonFiles/: Cvisualize.py  Gvisualize.py  plot.py  plotMax.py  plotMaxCG.py
shellFiles/: plot.sh  plotCG.sh
slides/: 2021-01-20.pptx
src/: ReadMe.md
src/CNOT_syn/: cGraph.cpp  cGraph.hpp  cTree.cpp  cTree.hpp  circuit.cpp  circuit.hpp  generate.cpp  generate.hpp  matrix.cpp  matrix.hpp
src/flute/: bookshelf_IO.c  flute.c  flute_mst.c
